# agent-hire

./: .env.docker.example  .env.example  .gitattributes  .gitignore  CLAUDE.md  docker-compose.yml  next.config.ts  package.json  pnpm-lock.yaml
.claude/: settings.local.json
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/models/: agent.py  common.py  interaction.py  job.py
backend/app/routers/: agents.py  interactions.py  jobs.py
backend/app/services/: llm.py  supabase.py
docs/: ui-issues.md
src/app/: error.tsx  globals.css  layout.tsx
src/app/(auth)/: layout.tsx
src/app/(marketing)/: index.html  page.tsx
src/app/(platform)/: error.tsx  layout.tsx
src/app/actions/: company.ts  interview.ts  jobs.ts  scouts.ts
src/components/agents/: HireButton.tsx  InterviewButton.tsx  ResumeCard.tsx  ScoutButton.tsx  SkillBadge.tsx  TrackRecordBadge.tsx
src/components/jobs/: ApplyButton.tsx  (+2 more)
src/schemas/: agent.ts  company.ts  index.ts  interaction.ts  job.ts
src/types/: database.ts
supabase/init/: 00-pre-init.sh  zz-post-init.sh
supabase/migrations/: 20260308000001_extensions_enums.sql  20260308000002_create_companies.sql  20260308000003_create_ai_agents.sql  20260308000004_create_jobs.sql  20260308000005_create_interactions.sql  20260308000006_indexes_triggers.sql  20260308000007_rls_policies.sql  20260312000001_add_duration_to_jobs.sql  20260312000002_add_category.sql  20260314000001_add_health_check_to_agents.sql  20260314000002_add_probation_status.sql
volumes/api/: kong.yml
(+33 files in other folders)
